# townscout

./: .cursorignore  .env.example  .gitignore  Dockerfile  INVESTIGATION_REPORT.md  LOGAN_FIX_COMPLETE.md  Makefile  POWER_CORRIDORS_FIX_SUMMARY.md  README.md  basic.json  docker-compose.yml  quick_start.sh  requirements.txt  verify_logan_fix.py
Future/: MA_crime_rates.py  MA_towns.csv  airports_coordinates.csv  ma_crime_rates.csv
anchors/: __init__.py  builder.py  candidates.py  cli.py  config.py  core_utils.py  mandatories.py  networks.py  qa.py  selection.py
api/: main.py
data/: datasets.json  golden_drivetime.csv  source_ledger.csv
docs/: ANCHORS.md  ARCHITECTURE.md  ARCHITECTURE_NOTES.md  ARCHITECTURE_OVERVIEW.md  BEACH_IMPLEMENTATION.md  BUG_FIXES_CHANGELOG.md  DEBUGGING.md  LOGAN_FIX_COMPLETE.md  MULTI_RESOLUTION_BUG.md  OVERHAUL.md  POWER_CORRIDORS.md  POWER_CORRIDORS_FIX_SUMMARY.md  POWER_LINES.md  RAILWAY_STATION_BUG_ANALYSIS.md  README.md  ROUTING_APPROXIMATION_QUALITY.md  TROUBLESHOOTING.md  VM_spec.md  WEATHER_IMPLEMENTATION.md  data_contracts.md  issues.md  quality_control_infra.md  tile_contract.json  vector_basemap_plan.md
old_townscout/: .gitignore
queries/: MA_public_transit.overpass  ski_areas.overpass
schemas/: filters.catalog.json  tiles.manifest.json
scripts/: 05_h3_to_geojson.py  07_build_jurisdictions.py  analyze_telemetry.py  build_anchors_modular.py  build_vector_basemap.sh  check_d_anchor_stats.py  check_tile_schema.py  compute_anchor_fingerprint.py  download_osm.py  (+10 more)
townscout_native/: Cargo.toml
townscout_native/src/: lib.rs
(+256 files in other folders)
