[package]
name = "townscout_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "t_hex"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0-beta.1", features = ["extension-module"] }
numpy = { version = "0.22.0-beta.1" }
rayon = "1.10.0"
h3o = "0.5"
rustc-hash = "1.1"
fast_paths = "0.2"
bincode = "1.3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
